--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verifica Codice</title>
+    <title>Verifica risultato</title>
     <style>
         body {
             display: flex; /* Attiva Flexbox per il body */
@@ -58,7 +58,7 @@
         <input type="text" id="codice" placeholder="Codice">
         <button onclick="verificaCodice()">Verifica</button>
         <div id="risultato" style="display:none;">
-            <h2>Hai trovato il tesoro!</h2>
+            <h2>Hai trovato l'ultimo indizio!</h2>
             <p style="text-align: left;">
                 <b><i>N</i></b>ostalgia di un tempo, in questo oggetto si cela,<br/>
                 <b><i>E</i></b>ra digitale non c'era, solo solchi e puntina, una storia vera.
